<resources>
    <string name="app_name">Isis</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="lblConfiguracoes">Configurações</string>

    <string name="lblSim">Sim</string>
    <string name="lblNao">Não</string>

    <string name="lblConta">Conta</string>
    <string name="lblContas">Contas</string>

    <string name="lblContaOrigem">Conta Origem</string>
    <string name="lblContaDestino">Conta Destino</string>
    <string name="lblCategoriaDespesas">Categorias de Despesas</string>
    <string name="lblCategoriaDespesa">Categoria de Despesa</string>
    <string name="lblReceita">Receita</string>
    <string name="lblReceitas">Receitas</string>
    <string name="lblDespesa">Despesa</string>
    <string name="lblDespesaCartaoCredito">Despesa Cartão de Crédito</string>
    <string name="lblDespesas">Despesas</string>
    <string name="lblOrigem">Origem:</string>
    <string name="lblDestino">Destino:</string>
    <string name="lblCategoriaReceitas">Categorias de Receitas</string>
    <string name="lblCategoriaReceita">Categoria de Receita</string>
    <string name="lblDescricaoDespesa">Descrição da Despesa</string>
    <string name="lblDescricaoReceita">Descrição da Receita</string>

    <string name="lblData">Data</string>
    <string name="lblDataPagamento">Data do Pagamento</string>
    <string name="lblDataRecebimento">Data do Recebimento</string>
    <string name="lblPendennte">Pendente</string>
    <string name="lblNaoRecebido">Não Recebido</string>
    <string name="lblRecebido">Recebido</string>
    <string name="lblEfetivada">Efetivada</string>
    <string name="lblFixa">Fixa</string>
    <string name="lblErro">Erro</string>

    <string name="lblPendente">Pendente</string>

    <string name="lblDe">de</string>
    <string name="lblRepetir">Repetir</string>
    <string name="lblParcelada">Parcelada</string>
    <string name="lblTotalParcelas">Total de Parcelas</string>

    <string name="lblTransferencia">Transferência</string>

    <string name="lblRegraImpSMS">Regra Importação SMS</string>
    <string name="lblImportacaoSMS">Lista de SMS para Importação</string>
    <string name="lblPaga">Paga</string>
    <string name="lblPago">Pago</string>
    <string name="lblNome">Nome</string>
    <string name="lblNomeRegra">Nome da Regra</string>
    <string name="lblNumeroSMS">SMS Recebidos do Nº</string>
    <string name="lblTextoNoSMS">Contendo o Texto</string>
    <string name="lblSubCategorias">Sub Categorias</string>
    <string name="lblSubCategoria">Sub Categoria</string>
    <string name="lblNovaSubCategoria">Criar Nova Sub Categoria</string>
    <string name="lblIconeCategoria">Ícone da Categoria</string>
    <string name="lblSaldoInicial">Saldo Inicial</string>
    <string name="lblSaldo">Saldo</string>
    <string name="lblSimboloRealComZero">R$ 0,00</string>
    <string name="lblSimboloReal">R$</string>
    <string name="lblTipoConta">Tipo de Conta</string>
    <string name="lblSalvar"> Salvar </string>
    <string name="lblExcluir"> Excluir </string>
    <string name="lblOrdemExibição">Ordem de Exibição:</string>
    <string name="lblMovimentos"> Movimentos </string>

    <string name="lblTotal">Total</string>
    <string name="lblConfirmada">Confirmada</string>

    <string name="lblQuantidade">Quantidade</string>
    <string name="lblValor">Valor</string>

    <string name="lblHabilitadaPergunta">Habilitada?</string>
    <string name="lblHabilitada">Habilitada</string>
    <string name="lblDesabilitada">Desabilitada</string>
    <string name="lblCor">Cor</string>
    <string name="lblIcone">Icone</string>
    <string name="lblExibirSomaResumo">Exibir a Soma no Resumo</string>
    <string name="lblExibir">Exibir</string>
    <string name="lblPrevisto">Previsto</string>
    <string name="lblSaldoAtual">Saldo Atual</string>
    <string name="lblSaldoPrevisto">Saldo Previsto</string>
    <string name="lblStatus">Status</string>
    <string name="lblTipoTransacao">Tipo Transação</string>
    <string name="lblTransferencias">Transferências</string>
    <string name="lblEntrada">Entrada</string>
    <string name="lblSaida">Saída</string>
    <string name="lblContaCorrente">Conta Corrente</string>
    <string name="lblContaPoupanca">Conta Poupança</string>
    <string name="lblDinheiro">Dinheiro</string>
    <string name="lblInvestimento">Investimento</string>
    <string name="lblOutros">Outros</string>
    <string name="lblCancelar">Cancelar</string>
    <string name="lblAtivo">Ativo</string>
    <string name="lblEfetivarAutomaticamente">Efetivar Automaticamente</string>
    <string name="lblNotificarLancamento">Notificar Lançamento</string>

    <string name="lblValorEntreTextos">O Valor está entre os seguintes textos</string>
    <string name="lblDataEntreTextos">A Data está entre os seguintes textos</string>
    <string name="lblNomeEntreTextos">A Descrição está entre os seguintes textos</string>
    <string name="lblTexto1">Texto 1</string>
    <string name="lblTexto2">Texto 2</string>

    <string name="lblMaisDetalhes">Mais Detalhes</string>

    <string name="lblMenosDetalhes">Menos Detalhes</string>

    <!-- Cartão de Crédito -->
    <string name="lblCartaoCredito">Cartão de Crédito</string>
    <string name="lblCartao">Cartão</string>
    <string name="lblBandeiraCartao">Bandeira do Cartão</string>
    <string name="lblDiaFechamento">Dia de Fechamento</string>
    <string name="lblDiaVencimento">Dia de Vencimento</string>
    <string name="lblContaAssociada">Conta Associada</string>
    <string name="lblLimiteCartao">Valor do Limite</string>

    <string name="lblFatura">Fatura</string>
    <string name="lblFaturaAberta">Fatura Aberta</string>
    <string name="lblFaturaFechada">Fatura Fechada</string>
    <string name="lblLimiteDisponivel">Limite Disponível</string>

    <!-- Bandeira Cartões -->
    <string name="lblCartaoVisa">Visa</string>
    <string name="lblCartaoMasterCard">MasterCard</string>
    <string name="lblCartaoHiperCard">HiperCard</string>
    <string name="lblCartaoAmericanExpress">American Express</string>
    <string name="lblCartaoDinersClub">Diners Club</string>
    <string name="lblCartaoBNDES">BNDES</string>
    <string name="lblCartaoSodexo">Sodexo</string>
    <string name="lblCartaoAlelo">Alelo</string>
    <string name="lblCartaoOutros">Outros</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="lblSenha">Senha</string>
    <string name="lblCodigoSeguranca">Digite seu código de segurança.</string>
    <string name="lblResumoMes">Resumo do Mês</string>


</resources>
