<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/act_cad_despesa"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".actCadastros.actCadDespesa">

    <ScrollView
        android:id="@+id/createdrill_scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblNome" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/edtNomeDespesa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elegantTextHeight="true"
                android:ems="10"
                android:hint="@string/lblNome"
                android:inputType="textCapSentences"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:layout_weight="0.1"
                android:maxLength="30" />

            <TextView
                android:text="0/0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtParcelas"
                android:layout_weight="0.9"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textStyle="normal|bold"
                android:textAlignment="textEnd"
                android:visibility="gone"/>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_obj_cadastro" />

        <TextView
            android:id="@+id/lblDataDespesa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblData" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/edtDataDespesa"
            android:inputType="date"
            android:hint="@string/lblData"
            android:maxLines="1"
            android:imeOptions="actionDone"

            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_obj_cadastro" />

        <TextView
            android:id="@+id/lblValorDespesa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblValor" />

        <EditText
            android:id="@+id/edtValorDespesa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789-"
            android:ems="10"
            android:hint="@string/lblSimboloRealComZero"
            android:inputType="numberSigned"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:maxLines="1"
            android:imeOptions="actionDone"
            />
        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_obj_cadastro" />

        <TextView
            android:id="@+id/lblCategoriaDespesa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblCategoriaDespesa" />

        <Spinner
            android:id="@+id/spnCategoriaDespesa"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:dropDownWidth="match_parent" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_obj_cadastro" />


        <TextView
            android:id="@+id/lblSubCategoriaDespesa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblSubCategoria" />

        <Spinner
            android:id="@+id/spnSubCategoriaDespesa"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:dropDownWidth="match_parent" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_obj_cadastro" />

        <TextView
            android:id="@+id/lblContaDespesa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblConta" />

        <Spinner
            android:id="@+id/spnContaDespesa"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:dropDownWidth="match_parent"
            android:gravity="center_vertical|start" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_obj_cadastro" />

        <CheckBox
            android:id="@+id/cbxDespesaPaga"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:checked="false"

            android:nestedScrollingEnabled="false"
            android:text="@string/lblPago" />

        <CheckBox
            android:id="@+id/cbxFixa"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:checked="false"

            android:nestedScrollingEnabled="false"
            android:text="@string/lblFixa" />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/cbxRepetir"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:checked="false"

                android:nestedScrollingEnabled="false"
                android:text="@string/lblRepetir"
                android:layout_weight="3"/>

            <EditText
                android:id="@+id/edtTotalRepeticao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:ems="3"
                android:hint="1"
                android:inputType="numberSigned"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:layout_weight="4"
                android:textAlignment="center"
                android:enabled="false" />

            <Spinner
                android:id="@+id/spnTipoRepeticao"
                android:dropDownWidth="match_parent"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_weight="3"
                android:gravity="center_vertical|start"
                />


        </LinearLayout>




    </LinearLayout>

    </ScrollView>

</RelativeLayout>
