<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/act_cad_transferencia"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".actCadastros.actCadTransferencia">
    <ScrollView
        android:id="@+id/createdrill_scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">


        <TextView
            android:id="@+id/lblDataTransferencia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblData" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/edtDataTransferencia"
            android:inputType="date"
            android:hint="@string/lblData"
            android:maxLines="1"
            android:imeOptions="actionDone"

            android:focusable="false" />

        <Space
            android:layout_width="@dimen/standard_20"
            android:layout_height="@dimen/standard_20" />

        <TextView
            android:id="@+id/lblValorTransferencia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblValor" />

        <EditText
            android:id="@+id/edtValorTransferencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789-"
            android:ems="10"
            android:hint="@string/lblSimboloRealComZero"
            android:inputType="numberSigned"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:maxLines="1"
            android:imeOptions="actionDone" />

        <Space
            android:layout_width="@dimen/standard_20"
            android:layout_height="@dimen/standard_20" />

        <TextView
            android:id="@+id/lblContaOrigem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblContaOrigem" />


        <Spinner
            android:id="@+id/spnContaOrigem"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:dropDownWidth="match_parent"
            android:gravity="center_vertical|start" />

        <Space
            android:layout_width="@dimen/standard_20"
            android:layout_height="@dimen/standard_20" />
        <TextView
            android:id="@+id/lblContaDestino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblContaDestino" />


        <Spinner
            android:id="@+id/spnContaDestino"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:dropDownWidth="match_parent"
            android:gravity="center_vertical|start" />


    </LinearLayout>

    </ScrollView>
</RelativeLayout>
