<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/corFragResumoFundo"
    android:padding="@dimen/fab_padding"
    tools:context="com.charlessodre.apps.gerenciadorfinanceiroisis.fragmentos.frgResumo">

    <LinearLayout
        android:id="@+id/LinearLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtResumoMes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/lblResumoMes"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <LinearLayout
            android:layout_marginTop="@dimen/fab_margin_top"
            android:id="@+id/lnlResumoConta"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragResumoAltura"
            android:layout_below="@+id/LinearLayout3"
            android:background="@drawable/bg_tab_pressed"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="1dp"
            android:textAlignment="center"

            >

            <LinearLayout
                android:id="@+id/lnlCorConta"
                android:layout_width="@dimen/fragResumoLarguraFaixaCor"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/corTelaContas"
                android:orientation="horizontal"></LinearLayout>

            <TextView
                android:id="@+id/txtNomeConta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="4dp"
                android:text="@string/lblContas"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtValorContaAcumulado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="R$ 0,00"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnlResumoReceitas"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragResumoAltura"

            android:layout_below="@+id/lnlResumoConta"
            android:background="@drawable/bg_tab_pressed"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="1dp"
            android:paddingTop="1dp"
            android:textAlignment="center">

            <LinearLayout
                android:id="@+id/lnlCorReceita"
                android:layout_width="@dimen/fragResumoLarguraFaixaCor"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/corTelaReceitas"
                android:orientation="horizontal"></LinearLayout>

            <TextView
                android:id="@+id/txtNomeReceita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="4dp"
                android:text="@string/lblReceitas"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtValorReceitaAcumulado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="R$ 0,00"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/corResolvido" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnlResumoDespesas"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragResumoAltura"
            android:layout_below="@+id/lnlResumoReceitas"
            android:background="@drawable/bg_tab_pressed"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="1dp"
            android:paddingTop="1dp"
            android:textAlignment="center">

            <LinearLayout
                android:id="@+id/lnlCorDespesas"
                android:layout_width="@dimen/fragResumoLarguraFaixaCor"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/corTelaDespesas"
                android:orientation="horizontal"></LinearLayout>

            <TextView
                android:id="@+id/txtNomeDespesas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="4dp"
                android:text="@string/lblDespesas"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtValorDespesasAcumulado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="R$ 0,00"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/corPendencia" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
